fix: use 'AccountId' in response in verification webhook

--- a/.env.example
+++ b/.env.example
@@ -21,9 +21,8 @@ MERCHANT_WEBHOOK_TIMEOUT=8000 # milliseconds
 
 # Gazprom
 GAZPROM_CERTIFICATE_FILE_NAME=gazprom-certificate-live.cer
-
-# Gazprom (live)
 GAZPROM_MERCH_ID=XXXXXXXXXX
+GAZPROM_ACCOUNT_ID=XXXXXXXXXX
 
 # Rate limiter
 RATE_LIMITER_RESTRICTION_PERIOD=10000 # ttl (in miliseconds)
