--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "http-method-enum": "^1.0.0",
     "http-status-codes": "^2.3.0",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "mongodb": "5.9.2",
     "node-schedule": "^2.1.1",
     "pg": "^8.11.3",
