feat: define basic structure of independent script to handle records from 'RecurrentPaymentsQueue' table

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "start:debug": "nest start --debug --watch",
     "start:prod:handler": "NODE_ENV=production SERVER_TYPE=handler node dist/main",
     "start:prod:external": "NODE_ENV=production SERVER_TYPE=externalInteraction node dist/main",
-    "recurring:payments:cron": "ts-node-dev --respawn --transpile-only src/common/scripts/recurringPayments.ts",
+    "execute:recurrent:payments": "echo 'Error: define the command'",
+    "execute:recurrent:payments:dev": "NODE_ENV=development.local IS_INDEPENDENT_SCRIPT=true SCRIPT_NAME=recurrent-payments-executor SERVER_TYPE=all nest start --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
