--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "start:prod:handler": "NODE_ENV=production SERVER_TYPE=handler node dist/main",
     "start:prod:external": "NODE_ENV=production SERVER_TYPE=externalInteraction node dist/main",
     "execute:recurrent:payments": "echo 'Error: define the command'",
-    "execute:recurrent:payments:dev": "NODE_ENV=development.local IS_INDEPENDENT_SCRIPT=true SCRIPT_NAME=recurrent-payments-executor SERVER_TYPE=all nest start --watch",
+    "execute:recurrent:payments:dev": "NODE_ENV=development.local IS_INDEPENDENT_SCRIPT=true SCRIPT_NAME=recurrent-payments-executor tsx watch --no-cache src/common/providers/independent-script/independent-script.executor.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -73,6 +73,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "husky": "^9.0.11",
     "jest": "^29.5.0",
+    "nodemon": "^3.1.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
@@ -81,6 +82,7 @@
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
+    "tsx": "^4.7.2",
     "typescript": "^5.1.3"
   },
   "jest": {
