feat: script 'recurrent-payments-executor' - creating order in Mongo

--- a/.env.example
+++ b/.env.example
@@ -36,3 +36,5 @@ ATOL_GROUP_CODE=group_code_00000000
 ATOL_COMPANY_EMAIL=support@softpaymoney.com
 ATOL_INN=11111111111
 ATOL_PAYMENT_URL=softpaymoney.com
+
+RECURRENT_PAYMENTS_RECORDS_PER_TIME=50
