--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "start:debug": "nest start --debug --watch",
     "start:prod:handler": "NODE_ENV=production SERVER_TYPE=handler node dist/main",
     "start:prod:external": "NODE_ENV=production SERVER_TYPE=externalInteraction node dist/main",
-    "execute:recurrent:payments": "echo 'Error: define the command'",
-    "execute:recurrent:payments:dev": "NODE_ENV=development.local IS_INDEPENDENT_SCRIPT=true SCRIPT_NAME=recurrent-payments-executor tsx watch --no-cache src/common/providers/independent-script/independent-script.executor.ts",
+    "execute:gazprom:recurrent:payments": "echo 'Error: define the command'",
+    "execute:gazprom:recurrent:payments:dev": "NODE_ENV=development.local IS_INDEPENDENT_SCRIPT=true PAYMENT_SYSTEM=Gazprom SCRIPT_NAME=recurrent-payments-executor tsx watch --no-cache src/common/providers/independent-script/independent-script.executor.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -48,6 +48,7 @@
     "node-schedule": "^2.1.1",
     "pg": "^8.11.3",
     "pino": "^8.19.0",
+    "randomstring": "^1.3.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typeorm": "0.3.20",
@@ -64,6 +65,7 @@
     "@types/node": "^20.3.1",
     "@types/node-schedule": "^2.1.6",
     "@types/pino": "^7.0.5",
+    "@types/randomstring": "^1.3.0",
     "@types/supertest": "^6.0.0",
     "@types/xml": "^1.0.11",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -73,7 +75,6 @@
     "eslint-plugin-prettier": "^5.0.0",
     "husky": "^9.0.11",
     "jest": "^29.5.0",
-    "nodemon": "^3.1.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
