feat: independent script to process 'RecurrentPaymentsQueue' table

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,8 @@ MERCHANT_WEBHOOK_TIMEOUT=8000 # milliseconds
 GAZPROM_CERTIFICATE_FILE_NAME=gazprom-certificate-live.cer
 GAZPROM_MERCH_ID=XXXXXXXXXX
 GAZPROM_ACCOUNT_ID=XXXXXXXXXX
+GAZPROM_LINK_TO_INITIATE_RECURRING_PAYMENT=https://lt.pga.gazprombank.ru/pages
+GAZPROM_FAILED_PAYMENT_URL=https://org.softpaymoney.com
 
 # Rate limiter
 RATE_LIMITER_RESTRICTION_PERIOD=10000 # ttl (in miliseconds)
@@ -38,3 +40,6 @@ ATOL_INN=11111111111
 ATOL_PAYMENT_URL=softpaymoney.com
 
 RECURRENT_PAYMENTS_RECORDS_PER_TIME=50
+
+# Miscellaneous
+MAIN_URL=https://softpaymoney.com
