feat: add encryption mechanism

--- a/.env.example
+++ b/.env.example
@@ -43,3 +43,7 @@ RECURRENT_PAYMENTS_RECORDS_PER_TIME=50
 
 # Miscellaneous
 MAIN_URL=https://softpaymoney.com
+
+# Encryption aes256
+ENCRYPTION_AES256_KEY=xxxxxxx
+ENCRYPTION_AES256_INITIALIZATION_VECTOR=xxxxxxx
