feat: integrate OpenSearch client

--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,8 @@ MAIN_URL=https://softpaymoney.com
 # Encryption aes256
 ENCRYPTION_AES256_KEY=xxxxxxx
 ENCRYPTION_AES256_INITIALIZATION_VECTOR=xxxxxxx
+
+# OpenSearch
+OPENSEARCH_INDEX=indexname
+OPENSEARCH_USERNAME=xxxxxxx
+OPENSEARCH_PASSWORD=xxxxxxx
